# ComfyUI_DICE_Talk

./: README.md  __init__.py  dice_talk.py  dice_talk_node.py  node_utils.py  pyproject.toml  requirements.txt
example_workflows/: ComfyUI_DICE_Talk.json  dice_talk_workflow.json
src/dataset/: test_preprocess.py
src/models/emotion_adapter/: emo.py
src/pipelines/: pipeline_dicetalk.py  pipeline_dicetalk_origin.py
src/utils/: util.py
